--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "资网",
   "main": "index.js",
   "scripts": {
-    "dev": "browser-sync start --server --startPath \"src/index.html\" --files \"src/**\" --browser \"firefox\"",
+    "start": "browser-sync start --server --startPath \"src/index.html\" --files \"src/**\" --browser \"firefox\"",
+    "dev": "babel --watch src/jsx --out-dir src/js --presets react-app/prod",
     "sass": "sass --watch src/sass:src/css --style expanded"
   },
   "author": "leonardo",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2"
+  }
 }
